--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,3 +18,7 @@ ja:
       idea:
         title: タイトル
         content: 内容
+      contact:
+        name: 名前
+        email: メールアドレス
+        contact_message: メッセージ
